<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/margin5p"
        android:paddingTop="@dimen/margin5p"
        android:text="@string/txtTitle"
        android:textColor="@android:color/white"
        android:textSize="@dimen/titleSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="366dp"
        android:contentDescription="@string/description"
        android:paddingBottom="@dimen/margin5p"
        android:paddingTop="@dimen/margin5p"
        app:srcCompat="@drawable/appsplit" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDes"
        android:textSize="@dimen/btnSize" />

</LinearLayout>